--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       </div>
       <div class="header-items">
         <ul>
-          <li>
+          <li class="nav-item">
             <a href="#">Features</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a href="#">Team</a>
           </li>
-          <li>
+          <li class="nav-item">
             <a href="#">Sign in</a>
           </li>
         </ul>
