--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </form>
       </div>
       
-      <div class="illustration">
-        <img src="./images/illustration-1.svg">
+      <div class="illustration-one">
+        <!-- <img src="./images/illustration-1.svg"> -->
       </div>
     </section>
 
