--- a/index.html
+++ b/index.html
@@ -42,15 +42,11 @@
     </header>
 
     <section class="pitch-one">
-      <div>
+      <div class="main-pitch">
           <h1>All your files in one secure location, accessible anywhere.</h1>
-          <p>Fylo stores all your most important files in one secure location.</p>
-          <p>Access them wherever you need, share and collaborate with<br /> friends,
-            family and co-workers.</p>
+          <p>Fylo stores all your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends, family and co-workers.</p>
         <form>
-          <label for="email">
-            <h3>Sign up for early access</h3>
-          </label>
           <div class="sign-email">
             <input type="email" name="email" id="email" placeholder="your@email.here" required>
             <button>Sign Up</button>
@@ -59,7 +55,7 @@
       </div>
       
       <div class="illustration-one">
-        <!-- <img src="./images/illustration-1.svg"> -->
+        <img src="./images/illustration-1.svg">
       </div>
     </section>
 
