--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           Access them wherever you need, share and collaborate with friends, family and co-workers.</p>
         <form>
           <div class="sign-email">
-            <input type="email" name="email" id="email" placeholder="your@email.here" required>
-            <button>Sign Up</button>
+            <input type="email" name="email" id="email" placeholder="Enter your email here" required>
+            <button>Get Started</button>
           </div>
         </form>
       </div>
